--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
-<!-- <div id="card-list">
-    <app-playing-cards />
-    <app-playing-cards [my-monster]="monster1"/>
-</div> -->
+<button (click)="toggleMonster()">Toggle monster</button>
 
-<app-search-bar 
-    (submit)="increaseCount()" 
-    [(search)]="search"
-/>
-
-Search : {{ search }} <br>
-Click count : {{ count }}
+<div id="card-list">
+    <app-playing-cards [monster]="monsters[selectedMonsterIndex]"/>
+</div>
