--- a/src/app/components/playing-cards/playing-cards.component.html
+++ b/src/app/components/playing-cards/playing-cards.component.html
@@ -1,28 +1,28 @@
 <div id="card">
-    <div id="inside">
+    <div id="inside" [style.background-color]="backgroundColor">
         <header>
             <div class="left">
-                <div id="name">{{ monster().name }}</div>
+                <div id="name">{{ monster.name }}</div>
             </div>
             <div class="right">
-                <div id="hp">{{ monster().hp }} hp</div>
+                <div id="hp">{{ monster.hp }} hp</div>
             </div>
         </header>
         <figure id="art">
-            <img src="electric.jpg" alt="" class="energy icon">
-            <figcaption>{{ monster().figureCaption }}</figcaption>
+            <img [src]="monster.image" alt="" class="energy icon">
+            <figcaption>{{ monster.figureCaption }}</figcaption>
         </figure>
         <div id="capacities">
             <div class="capacity">
                 <div class="main">
                     <div class="name">
-                        {{ monster().attackName }}
+                        {{ monster.attackName }}
                     </div>
-                    <div class="damage">{{ monster().attackStrength }}</div>
+                    <div class="damage">{{ monster.attackStrength }}</div>
                 </div>
             </div>
             <div class="description">
-                {{ monster().attackDescription }}
+                {{ monster.attackDescription }}
             </div>
         </div>
     </div>
